--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@hookform/resolvers": "^3.10.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@sentry/nextjs": "^8.48.0",
     "class-variance-authority": "^0.7.1",
@@ -27,7 +29,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
